# File-Transfer

./: CMakeLists.txt  README.md
SRC/client/: CMakeLists.txt  client.cpp  client.hpp  connect.cpp
SRC/server/: CMakeLists.txt  connect.cpp  sermysql.cpp  server.cpp  server.hpp
downloads/: test_upload.txt
